Add favicons and permissions

--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="popup.css">
     </head>
     <body>
-        <button id="getModal">Click Bait</button>
+        <h4>Effortless Subject Reordering</h4>
+        <button id="getModal">Start</button>
         <script type="text/javascript" src="popup.js"></script>
+        <h6>Made with 💗 on <a href="https://github.com/TheAnshul756/MCGFTGF" target="_blank">Github</a></h6>
     </body>
 </html>
